# Banking-System

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  structure.md
banking/: bank_account.py
config/: __init__.py  settings.py
db/: accounts_store.py
docs/: problem_statement.md  structure.md
model/: __init__.py  account.py  bank_account.py  overdraft.py  pseudo_account.py  transactions.py
src/banking_system/: __init__.py
src/banking_system.egg-info/: PKG-INFO  SOURCES.txt
src/banking_system/config/: __init__.py  settings.py
src/banking_system/db/: __init__.py  accounts_store.py
src/banking_system/model/: __init__.py  account.py  overdraft.py  pseudo_account.py  transactions.py
tests/: README.md  conftest.py  test_account_transactions.py  test_bank_account.py  test_custom_bank_account.py  test_integration.py  test_overdraft.py
